create pages of events, show event, contact, explore, footer

--- a/site/website/index.html
+++ b/site/website/index.html
@@ -17,11 +17,14 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/vendors.css" rel="stylesheet">
+
+    <link href="/css/shop.css" rel="stylesheet">
     <!-- SPECIFIC CSS -->
     <link href="/css/vegas.min.css" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUQKuq-IHkzCt4VoGq2z4XYJ_ip7ZRkws"></script>
   </body>
 </html>
