--- a/site/website/index.html
+++ b/site/website/index.html
@@ -19,6 +19,7 @@
     <link href="/css/vendors.css" rel="stylesheet">
 
     <link href="/css/shop.css" rel="stylesheet">
+    <link href="/css/admin.css" rel="stylesheet">
     <!-- SPECIFIC CSS -->
     <link href="/css/vegas.min.css" rel="stylesheet">
   </head>
